<resources>
    <string name="cov_login_for_chat">连接 AI 引擎</string>
    <string name="cov_detail_agent_title">对话式 AI 引擎体验</string>
    <string name="cov_detail_not_joined">未加入</string>
    <string name="cov_detail_join_call">连接 AI 引擎</string>
    <string name="cov_detail_end_call">结束通话</string>
    <string name="cov_detail_agent_joining">加入中</string>
    <string name="cov_detail_agent_ending">停止中</string>
    <string name="cov_detail_join_call_failed">智能体加入失败，请稍后重试。</string>
    <string name="cov_detail_join_call_succeed">智能体已加入！</string>
    <string name="cov_detail_join_call_tips">请在对话初期大声、清晰地说话，提升智能体对您的声音锁定效果。</string>
    <string name="cov_detail_agent_leave">智能体已离开！</string>
    <string name="cov_detail_message_list_you">你</string>
    <string name="cov_detail_connecting">连接中…</string>
    <string name="cov_detail_agent_join_timeout">智能体加入超时，请稍后重试。</string>
    <string name="cov_detail_agent_state_error">智能体状态异常，请退出重试。</string>
    <string name="cov_detail_net_state_error">网络异常，请检查网络设置。</string>
    <string name="cov_detail_state_error">智能体状态异常，请重试。</string>
    <string name="cov_detail_room_error">房间已经不存在了，请发起一个新的会话。</string>
    <string name="cov_detail_start_agent_limit_error">当前预设资源超限，请稍后重试</string>

    <string name="cov_info_dialog_title">信息</string>
    <string name="cov_channel_info_title">频道信息</string>
    <string name="cov_info_agent_status">智能体状态</string>
    <string name="cov_info_agent_id">智能体 ID</string>
    <string name="cov_info_agent_connected">已连接</string>
    <string name="cov_info_room_status">房间状态</string>
    <string name="cov_info_room_id">房间 ID</string>
    <string name="cov_info_empty">--</string>
    <string name="cov_info_participant_id">参与者 ID</string>
    <string name="cov_info_your_id">您的 ID</string>
    <string name="cov_info_your_network">您的网络</string>
    <string name="cov_info_your_network_disconnected">未连接</string>
    <string name="cov_info_your_network_good">良好</string>
    <string name="cov_info_your_network_medium">一般</string>
    <string name="cov_info_your_network_poor">较差</string>
    <string name="cov_netwotk_info_title">网络信息</string>
    <string name="cov_info_logout">退出登录</string>
    <string name="cov_info_more">更多操作</string>
    <string name="cov_info_uploader">一键上报</string>
    <string name="cov_my_device">我的设备</string>

    <string name="cov_setting_title">人物设定</string>
    <string name="cov_setting_title_connected">(连接中不可修改)</string>
    <string name="cov_setting_agent">智能体</string>
    <string name="cov_setting_preset">预设</string>
    <string name="cov_setting_voice">语音</string>
    <string name="cov_setting_model">模型</string>
    <string name="cov_setting_language">语言</string>
    <string name="cov_setting_device">设备</string>
    <string name="cov_setting_advanced_settings">高级设置</string>
    <string name="cov_setting_microphone">麦克风</string>
    <string name="cov_setting_speaker">扬声器</string>
    <string name="cov_setting_bhvs">启用 对话人声锁定</string>
    <string name="cov_setting_ai_vad">启用&#160;&#160;</string>
    <string name="cov_setting_ai_vad_high">优雅打断</string>
    <string name="cov_setting_network_error">请求失败：</string>
    <string name="cov_agent_connecting">连接中...</string>
    <string name="cov_copy_succeed">已复制</string>
    <string name="cov_interrupted">已打断</string>

    <string-array name="cov_setting_microphone_array">
        <item>内置麦克风</item>
    </string-array>

    <string-array name="cov_setting_speaker_array">
        <item>内置扬声器</item>
    </string-array>

    <string name="cov_permission_required">需要权限</string>
    <string name="cov_mic_permission_required_content">语音聊天需要麦克风权限。请授予权限以继续。</string>
    <string name="cov_retry">重试</string>
    <string name="cov_exit">退出</string>

    <!-- IOT  -->
    <string name="cov_iot_title">对话式 AI 硬件</string>
    <string name="cov_iot_devices_num">%d个设备</string>
    <string name="cov_iot_devices_welcome">欢迎</string>
    <string name="cov_iot_devices_add_device_tip">让我们现在添加设备吧</string>
    <string name="cov_iot_devices_add_device">添加设备</string>
    <string name="cov_iot_devices_prepare">准备工作</string>
    <string name="cov_iot_devices_prepare_tip_1_part1">按住配网按钮&#160;</string>
    <string name="cov_iot_devices_prepare_tip_1_part2">3秒</string>
    <string name="cov_iot_devices_prepare_tip_1_part3">&#160;进入配对状态</string>
    <string name="cov_iot_devices_prepare_tip_2">配对过程中会请求下列权限和开关</string>
    <string name="cov_iot_devices_prepare_location">位置信息</string>
    <string name="cov_iot_devices_prepare_bluetooth">蓝牙</string>
    <string name="cov_iot_devices_prepare_wifi">2.4G Wi-Fi</string>
    <string name="cov_iot_devices_prepare_ready">已完成上述操作</string>
    <string name="cov_iot_devices_prepare_next">下一步</string>
    <string name="cov_iot_devices_SN">SN</string>

    <string name="cov_iot_devices_scan">扫描附近设备</string>
    <string name="cov_iot_devices_scanning">正在扫描…</string>
    <string name="cov_iot_devices_scan_tips">请确保智能设备已打开配网开关，\n且位于手机附近</string>
    <string name="cov_iot_devices_scan_failed">搜索失败</string>
    <string name="cov_iot_devices_scan_failed_tips">请检查设备是否处于待配网状态</string>
    <string name="cov_iot_devices_scan_failed_tips_2">请确保智能设备已打开配网开关，且位于手机附近</string>
    <string name="cov_iot_devices_scan_again">重新扫描</string>

    <string name="cov_iot_wifi_title_part1">选择&#160;</string>
    <string name="cov_iot_wifi_title_part2">2.4GHz</string>
    <string name="cov_iot_wifi_title_part3">&#160;Wi-fi网络</string>
    <string name="cov_iot_wifi_title_2">输入Wi-Fi密码</string>
    <string name="cov_iot_wifi_title_tips">提示：不支持5G Wi-Fi</string>
    <string name="cov_iot_wifi_password">密码</string>
    <string name="cov_iot_wifi_change">更换</string>
    <string name="cov_iot_wifi_warning">请输入2.4G 无线网络</string>

    <string name="cov_iot_permission_title">开启权限和开关</string>
    <string name="cov_iot_permission_tip">需开启以下权限与开关，用于添加附近设备</string>
    <string name="cov_iot_permission_device">附近设备服务未授权</string>
    <string name="cov_iot_permission_bluetooth">打开手机蓝牙</string>
    <string name="cov_iot_permission_location_check">定位服务未授权</string>
    <string name="cov_iot_permission_wifi">打开 Wifi 开关</string>
    <string name="cov_iot_permission_open">去开启</string>

    <string name="cov_iot_devices_connect">添加设备中</string>
    <string name="cov_iot_devices_connecting">添加设备中…</string>
    <string name="cov_iot_devices_connect_send_data">正在发送数据</string>
    <string name="cov_iot_devices_connect_send_success">发送password成功</string>
    <string name="cov_iot_devices_connect_connect_success">添加成功</string>
    <string name="cov_iot_devices_connect_connect_success_tips">注意：设备添加信息将在本地保存，重新安装app后需要重新添加设备。</string>
    <string name="cov_iot_devices_connect_connect_success_know">我知道了</string>
    <string name="cov_iot_devices_connect_connect_failed">无法连接到智能设备！</string>
    <string name="cov_iot_devices_connect_connect_failed_check">请按照以下步骤检查：</string>
    <string name="cov_iot_devices_connect_connect_failed_check_wifi">检查Wi-Fi密码是否正确</string>
    <string name="cov_iot_devices_connect_connect_failed_check_device">检查设备是否处于待配网状态</string>
    <string name="cov_iot_devices_connect_connect_failed_check_net">检查设备是否靠近路由器</string>
    <string name="cov_iot_devices_connect_connect_failed_check_slide">左右滑动查看更多</string>

    <string name="cov_iot_devices_setting_name_limit">限10个字符，且不能为空</string>
    <string name="cov_iot_devices_setting_preset">预设人设</string>
    <string name="cov_iot_devices_setting_preset_1_title">故事模式</string>
    <string name="cov_iot_devices_setting_preset_1_content">专为 2–12 岁孩子定制，绘声绘色讲奇妙故事</string>
    <string name="cov_iot_devices_setting_preset_2_title">树洞模式</string>
    <string name="cov_iot_devices_setting_preset_2_content">暖心倾听你的倾诉，真诚给予正向情绪价值</string>
    <string name="cov_iot_devices_reconnect">重新配网</string>
    <string name="cov_iot_devices_delete">删除设备</string>
    <string name="cov_iot_devices_setting_confirm_title">您是否要保存当前更改？</string>
    <string name="cov_iot_devices_setting_confirm_content">确认更改后，会在智能设备下次联网时修改配置。</string>
    <string name="cov_iot_devices_setting_cancel">放弃更改</string>
    <string name="cov_iot_devices_setting_confirm">确认更改</string>
    <string name="cov_iot_devices_setting_delete">您是否要删除“%s”？</string>
    <string name="cov_iot_devices_setting_delete_content">删除后，将不能更改它的对话设定。是否继续删除？</string>
    <string name="cov_iot_devices_setting_delete_confirm">删除</string>
    <string name="cov_iot_devices_setting_delete_toast">智能设备已删除</string>
    <string name="cov_iot_devices_setting_rename_toast">昵称修改成功</string>
    <string name="cov_iot_devices_setting_modify_success_toast">智能设备设置修改成功</string>
    <string name="cov_iot_devices_setting_modify_failed_toast">智能设备设置修改失败，请重试</string>
    <string name="cov_iot_devices_setting_modify_name">修改名字</string>
    <string name="cov_iot_devices_setting_input_name">请输入名字</string>
    <string name="cov_iot_devices_setting_modify_name_confirm">确定</string>
    <string name="cov_iot_devices_setting_modify_name_cancel">取消</string>
</resources>