<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
tools:theme="@style/Theme.AppCompat"
android:background="@drawable/bottom_dialog_bg">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="15dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_title"
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/grabber"
        android:layout_gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginStart="24dp"
        android:text="@string/cov_info_dialog_title"
        android:textColor="@color/ai_icontext1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_gravity="start"
        app:layout_constraintTop_toBottomOf="@id/iv_title"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/app_setting_exit"
        android:layout_marginEnd="24dp"
        android:layout_gravity="end"
        app:layout_constraintTop_toTopOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/iv_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#1DFFFFFF"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_net_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/ai_icontext4"
        android:text="@string/cov_netwotk_info_title"
        app:layout_constraintTop_toBottomOf="@id/iv_line"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/ll_net_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/settings_item_bg"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_net_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingHorizontal="16dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_network"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/cov_info_your_network"
                android:textColor="@color/ai_icontext1"
                android:textSize="16sp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_network_status"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="@string/cov_info_your_network_disconnected"
                android:textColor="@color/ai_red6"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_channel_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/ai_icontext4"
        android:text="@string/cov_channel_info_title"
        app:layout_constraintTop_toBottomOf="@id/ll_net_content"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/ll_item_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/settings_item_bg"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_channel_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingHorizontal="16dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_agent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/cov_info_agent_status"
                android:textColor="@color/ai_icontext1"
                android:textSize="16sp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_agent_status"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="@string/cov_info_agent_connected"
                android:textColor="@color/ai_green6"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:background="@color/ai_line1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingHorizontal="16dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/cov_info_agent_id"
                android:textColor="@color/ai_icontext1"
                android:textSize="16sp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_agent_id"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="xxx"
                android:textColor="@color/ai_icontext4"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:background="@color/ai_line1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingHorizontal="16dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_room"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/cov_info_room_status"
                android:textColor="@color/ai_icontext1"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_room_status"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="@string/cov_info_agent_connected"
                android:textColor="@color/ai_green6"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:background="@color/ai_line1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingHorizontal="16dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/cov_info_room_id"
                android:textColor="@color/ai_icontext1"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_room_id"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="xxx"
                android:textColor="@color/ai_icontext4"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:background="@color/ai_line1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingHorizontal="16dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_uid"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/cov_info_your_id"
                android:textColor="@color/ai_icontext1"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_uid_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:textColor="@color/ai_icontext4"
                android:textSize="16sp"
                tools:text="xxx" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_uploader"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="一键上报"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="#FDFCFB"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_bg_blue_radio_enable_selector" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_item_content" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
